--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Ignore Mac DS_Store files
 .DS_Store
 **/.DS_Store
-Referencias
 **/.Rproj.user
 ./**/renv
 .Rproj.user
-
+**/.Rhistory
+**/*.RProj
