--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # Ignore Mac DS_Store files
 .DS_Store
 **/.DS_Store
-**/.Rproj.user
-**/renv
-.Rproj.user
+**/renv/
 **/.Rhistory
 *.RProj
-*/.Rprofile
+**/.Rprofile
+
+**/.Rproj.user
